agent module changes and other db tables added

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^7.0.9",
     "path": "^0.12.7",
     "sequelize": "^6.37.7",
-    "sharp": "^0.34.4"
+    "sharp": "^0.34.4",
+    "twilio": "^5.10.5"
   }
 }
